提交查询的方法 提交mongoDB配置文件和redis配置文件 提交视频的展示和查询方法

--- a/SpringBoot_provider/src/main/resources/config.properties
+++ b/SpringBoot_provider/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 #db driver
 jdbc.driver=com.mysql.jdbc.Driver
 #db url
-jdbc.url=jdbc:mysql://localhost:3307/hospital
+jdbc.url=jdbc:mysql://localhost:3306/group2-hospital
 #db username
 jdbc.username=root
 #db password
